# oxidecop

./: BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
bench/: compare.sh  run.sh
oracle/: leaderboard.rb  oracle.rb  run_oracle.sh
src/: cache.rs  config.rs  declarative.rs  main.rs  nodepattern.rs  schema_gen.rs
src/cops/: breakable.rs  bundler.rs  gemspec.rs  layout.rs  lint_cops.rs  metrics.rs  migration.rs  mod.rs  naming.rs  style.rs
tools/: gen_schema.rb  parity.sh  prepare_corpus.rb
