[package]
name = "oxidecop"
version = "0.1.0"
edition = "2021"
description = "OxideCop: a fast, native, RuboCop-compatible Ruby linter and autocorrector over the Prism parser"
license = "MIT"
repository = "https://github.com/momiji-rs/oxidecop"
homepage = "https://github.com/momiji-rs/oxidecop"
readme = "README.md"
keywords = ["ruby", "linter", "rubocop", "prism", "lint"]
categories = ["development-tools", "command-line-utilities"]
# the crate ships the linter itself; the oracle/parity harnesses, bench
# scripts and the vendored rubocop default.yml stay in the repo only
exclude = ["vendor/*", "oracle/*", "bench/*", "tools/*", ".github/*", "BENCHMARKS.md"]

[[bin]]
name = "oxidecop"
path = "src/main.rs"

[dependencies]
ruby-prism = "1.9"
regex = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
